--- a/templates/solace-vmr-master.template
+++ b/templates/solace-vmr-master.template
@@ -199,12 +199,14 @@
         "RemoteAccessCIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/x",
+            "Default": "0.0.0.0/0",
             "Description": "Allowed CIDR block for external access to cluster nodes",
             "Type": "String"
         },
         "SSHAccessCIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/x",
+            "Default": "0.0.0.0/0",
             "Description": "Allowed CIDR block for external access to cluster nodes for mgmt",
             "Type": "String"
         },
@@ -217,11 +219,6 @@
                 "m3.xlarge",
                 "m4.large",
                 "m4.xlarge",
-                "m4.2xlarge",
-                "m4.4xlarge",
-                "m5.xlarge",
-                "m5.2xlarge",
-                "m5.4xlarge",
                 "c4.xlarge"
             ],
             "ConstraintDescription": "Must be a valid EC2 instance type.",
