--- a/templates/solace-vmr.template
+++ b/templates/solace-vmr.template
@@ -704,6 +704,12 @@
                         "FromPort": "55555",
                         "ToPort": "55555",
                         "SourceSecurityGroupId": { "Ref": "SolaceInternalSecurityGroupMember" } 
+                    },
+                    {
+                        "IpProtocol": "tcp",
+                        "FromPort": "5550",
+                        "ToPort": "5550",
+                        "SourceSecurityGroupId": { "Ref": "SolaceInternalSecurityGroupMember" } 
                     }
                 ]
             }
@@ -807,7 +813,10 @@
             "DependsOn": ["MessageRouterPrimaryStack"],
             "Condition": "UsePrivateSubnetsCondition",
             "Properties":{
-                "SecurityGroups": [{ "Ref" : "MessageRouterSecurityGroup"}],
+                "SecurityGroups": [
+                    { "Ref" : "MessageRouterSecurityGroup" },
+                    { "Ref" : "SolaceInternalSecurityGroupMember" }
+                ],
                 "Subnets" : { "Ref": "PublicSubnetIDs" },
                 "Instances" : [
                     {"Fn::GetAtt": ["MessageRouterPrimaryStack","Outputs.EC2ID"]},
