--- a/templates/solace-vmr.template
+++ b/templates/solace-vmr.template
@@ -151,7 +151,7 @@
             ],
             "ConstraintDescription": "Must be a valid EC2 instance type.",
             "Default": "t2.large",
-            "Description": "Instance Type for Solace Message Router",
+            "Description": "Instance Type for Solace Message Router. Note: Make sure that your region supports the selected instance type before continuing",
             "Type": "String"
         },
         "MessageRouterNodeStorage": {
@@ -182,7 +182,7 @@
             ],
             "ConstraintDescription": "Must be a valid EC2 instance type.",
             "Default": "t2.large",
-            "Description": "Instance Type for Solace Message Router",
+            "Description": "Instance Type for Solace Message Router. Note: Make sure that your region supports the selected instance type before continuing",
             "Type": "String"
         },
         "KeyPairName": {
@@ -203,7 +203,6 @@
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/x",
             "Description": "Allowed CIDR block for external access to cluster nodes",
-            "Default": "0.0.0.0/0",
             "Type": "String"
         },
         "SSHSecurityGroupID": {
@@ -707,6 +706,48 @@
                     },
                     {
                         "IpProtocol": "tcp",
+                        "FromPort": "55003",
+                        "ToPort": "55003",
+                        "SourceSecurityGroupId": { "Ref": "SolaceInternalSecurityGroupMember" } 
+                    },
+                    {
+                        "IpProtocol": "tcp",
+                        "FromPort": "8000",
+                        "ToPort": "8000",
+                        "SourceSecurityGroupId": { "Ref": "SolaceInternalSecurityGroupMember" } 
+                    },
+                    {
+                        "IpProtocol": "tcp",
+                        "FromPort": "5672",
+                        "ToPort": "5672",
+                        "SourceSecurityGroupId": { "Ref": "SolaceInternalSecurityGroupMember" } 
+                    },
+                    {
+                        "IpProtocol": "tcp",
+                        "FromPort": "9000",
+                        "ToPort": "9000",
+                        "SourceSecurityGroupId": { "Ref": "SolaceInternalSecurityGroupMember" } 
+                    },
+                    {
+                        "IpProtocol": "tcp",
+                        "FromPort": "1883",
+                        "ToPort": "1883",
+                        "SourceSecurityGroupId": { "Ref": "SolaceInternalSecurityGroupMember" } 
+                    },
+                    {
+                        "IpProtocol": "tcp",
+                        "FromPort": "80",
+                        "ToPort": "80",
+                        "SourceSecurityGroupId": { "Ref": "SolaceInternalSecurityGroupMember" } 
+                    },
+                    {
+                        "IpProtocol": "tcp",
+                        "FromPort": "8080",
+                        "ToPort": "8080",
+                        "SourceSecurityGroupId": { "Ref": "SolaceInternalSecurityGroupMember" } 
+                    },
+                    {
+                        "IpProtocol": "tcp",
                         "FromPort": "5550",
                         "ToPort": "5550",
                         "SourceSecurityGroupId": { "Ref": "SolaceInternalSecurityGroupMember" } 
@@ -754,6 +795,38 @@
                         "IpProtocol": "tcp",
                         "FromPort": "55555",
                         "ToPort": "55555",
+                        "CidrIp": {
+                            "Ref": "RemoteAccessCIDR"
+                        }
+                    },
+                    {
+                        "IpProtocol": "tcp",
+                        "FromPort": "55003",
+                        "ToPort": "55003",
+                        "CidrIp": {
+                            "Ref": "RemoteAccessCIDR"
+                        }
+                    },
+                    {
+                        "IpProtocol": "tcp",
+                        "FromPort": "8000",
+                        "ToPort": "8000",
+                        "CidrIp": {
+                            "Ref": "RemoteAccessCIDR"
+                        }
+                    },
+                    {
+                        "IpProtocol": "tcp",
+                        "FromPort": "5672",
+                        "ToPort": "5672",
+                        "CidrIp": {
+                            "Ref": "RemoteAccessCIDR"
+                        }
+                    },
+                    {
+                        "IpProtocol": "tcp",
+                        "FromPort": "9000",
+                        "ToPort": "9000",
                         "CidrIp": {
                             "Ref": "RemoteAccessCIDR"
                         }
@@ -834,40 +907,16 @@
                     "InstancePort" : "55003",
                     "Protocol" : "TCP"
                     },{
-                    "LoadBalancerPort" : "55443",
-                    "InstancePort" : "55443",
-                    "Protocol" : "TCP"
-                    },{
-                    "LoadBalancerPort" : "443",
-                    "InstancePort" : "443",
-                    "Protocol" : "TCP"
-                    },{
-                    "LoadBalancerPort" : "8883",
-                    "InstancePort" : "8883",
-                    "Protocol" : "TCP"
-                    },{
                     "LoadBalancerPort" : "8000",
                     "InstancePort" : "8000",
-                    "Protocol" : "TCP"
-                    },{
-                    "LoadBalancerPort" : "8443",
-                    "InstancePort" : "8443",
                     "Protocol" : "TCP"
                     },{
                     "LoadBalancerPort" : "5672",
                     "InstancePort" : "5672",
                     "Protocol" : "TCP"
                     },{
-                    "LoadBalancerPort" : "5671",
-                    "InstancePort" : "5671",
-                    "Protocol" : "TCP"
-                    },{
                     "LoadBalancerPort" : "9000",
                     "InstancePort" : "9000",
-                    "Protocol" : "TCP"
-                    },{
-                    "LoadBalancerPort" : "9443",
-                    "InstancePort" : "9443",
                     "Protocol" : "TCP"
                     },{
                     "LoadBalancerPort" : "1883",
