--- a/templates/nodecreate.template
+++ b/templates/nodecreate.template
@@ -3,11 +3,23 @@
     "Description": "CloudFormation sub-template for Single Node EC2 deployment within Solace HA Cluster",
     "Parameters": {
         "SolaceDockerURL": {
-            "Description": "Require URL to enterprise or Evaluation VMR, not Community",
+            "Description": "Required URL to enterprise or Evaluation VMR, not Community",
             "Type": "String"
         },
         "AdminPassword": {
-            "Description": "Require password to access SolOS admin console and SEMP",
+            "Description": "Required password to access SolOS admin console and SEMP",
+            "Type": "String"
+        },
+        "ContainerLoggingFormat": {
+            "AllowedValues": [
+                "graylog",
+                "legacy",
+                "raw",
+                "rfc5424"
+            ],
+            "ConstraintDescription": "Must be a valid container logging format.",
+            "Default": "graylog",
+            "Description": "Solace VMR logging format in CloudWatch",
             "Type": "String"
         },
         "BootDiskSize": {
@@ -36,15 +48,6 @@
             "Type": "String"
         },
         "NodeInstanceType": {
-            "AllowedValues": [
-                "t2.large",
-                "t2.xlarge",
-                "m3.large",
-                "m3.xlarge",
-                "m4.large",
-                "m4.xlarge",
-                "c4.xlarge"
-            ],
             "ConstraintDescription": "Must be a valid EC2 instance type.",
             "Default": "t2.large",
             "Description": "Instance Type for Kafka brokers; select m3/m4 or i2 instance types for us-west-1 and sa-east-1",
@@ -178,10 +181,6 @@
                 "IOPs": "20000"
             }
         }
-
-
-
-
     },
     "Conditions": {
         "EphemeralStorage": {
@@ -281,6 +280,12 @@
                         "file = /var/log/cfn-wire.log\n",
                         "log_group_name = ", { "Ref": "CloudFormationLogs" }, "\n",
                         "log_stream_name = {instance_id}/cfn-wire.log\n",
+                        "datetime_format = \n",
+
+                        "[/var/log/solace-vmr.log]\n",
+                        "file = /var/log/solace-vmr.log\n",
+                        "log_group_name = ", { "Ref": "CloudFormationLogs" }, "\n",
+                        "log_stream_name = {instance_id}/solace-vmr.log\n",
                         "datetime_format = \n"
                         ] ] },
                         "mode": "000444",
@@ -355,10 +360,18 @@
                         }
                     }
                 },
+
                 "install_solace" : {
+                        "commands" : {
+                        "01_create_secrets_directory" : {
+                            "command" : "mkdir -p /mnt/vmr/secrets"
+                        }
+                        },
                         "files": {
-                            "/tmp/solOSpasswd": {
-                                "content" : { "Ref": "AdminPassword" }
+                            "/mnt/vmr/secrets/solOSpasswd": {
+                                "content": { "Fn::Join": [ "", [
+                                     { "Ref" : "AdminPassword" }, "\n"
+                                ] ] },
                             },
                             "/tmp/gen-cluster-hosts.sh": {
                                 "source": {
@@ -614,10 +627,15 @@
                                 "$AMI_SBIN/install-solace.sh -c /tmp/solacehosts -d /tmp/solace",
                                 "  -u ",
                                     { "Ref": "SolaceDockerURL" },
-                                "  -p /tmp/solOSpasswd",
+                                "  -p /mnt/vmr/secrets/solOSpasswd",
                                 "  -s ",
                                    { "Ref": "PersistentStorage" },
                                 "  -v /dev/xvdb",
+                                "  -f ",
+                                    { "Ref": "ContainerLoggingFormat" },
+                                "  -g ",
+                                    { "Ref": "CloudFormationLogs" },
+                                "  -r ${instance_id}/solace-vmr.log",
                                 " \n",
                                 "## Signal back information for outputs (now that all nodes are up) \n",
                                 "/opt/aws/bin/cfn-signal -e 0 -r 'Solace HA deployment complete' '",
