--- a/templates/nodecreate.template
+++ b/templates/nodecreate.template
@@ -3,11 +3,23 @@
     "Description": "CloudFormation sub-template for Single Node EC2 deployment within Solace HA Cluster",
     "Parameters": {
         "SolaceDockerURL": {
-            "Description": "Require URL to enterprise or Evaluation VMR, not Community",
+            "Description": "Required URL to enterprise or Evaluation VMR, not Community",
             "Type": "String"
         },
         "AdminPassword": {
-            "Description": "Require password to access SolOS admin console and SEMP",
+            "Description": "Required password to access SolOS admin console and SEMP",
+            "Type": "String"
+        },
+        "ContainerLoggingFormat": {
+            "AllowedValues": [
+                "graylog",
+                "legacy",
+                "raw",
+                "rfc5424"
+            ],
+            "ConstraintDescription": "Must be a valid container logging format.",
+            "Default": "graylog",
+            "Description": "Solace VMR logging format in CloudWatch",
             "Type": "String"
         },
         "BootDiskSize": {
@@ -36,15 +48,6 @@
             "Type": "String"
         },
         "NodeInstanceType": {
-            "AllowedValues": [
-                "t2.large",
-                "t2.xlarge",
-                "m3.large",
-                "m3.xlarge",
-                "m4.large",
-                "m4.xlarge",
-                "c4.xlarge"
-            ],
             "ConstraintDescription": "Must be a valid EC2 instance type.",
             "Default": "t2.large",
             "Description": "Instance Type for Kafka brokers; select m3/m4 or i2 instance types for us-west-1 and sa-east-1",
@@ -95,49 +98,52 @@
     "Mappings": {
         "AWSAMIRegionMap": {
             "AMI": {
-                "AMZNLINUXHVM": "amzn-ami-hvm-2017.03.0.20170417-x86_64"
+                "AMZNLINUXHVM": "amzn-ami-hvm-2017.09.1.20180117-x86_64"
             },
             "ap-northeast-1": {
-                "AMZNLINUXHVM": "ami-923d12f5"
+                "AMZNLINUXHVM": "ami-ceafcba8"
             },
             "ap-northeast-2": {
-                "AMZNLINUXHVM": "ami-9d15c7f3"
+                "AMZNLINUXHVM": "ami-942dd1f6"
             },
             "ap-south-1": {
-                "AMZNLINUXHVM": "ami-52c7b43d"
+                "AMZNLINUXHVM": "ami-531a4c3c"
             },
             "ap-southeast-1": {
-                "AMZNLINUXHVM": "ami-fc5ae39f"
+                "AMZNLINUXHVM": "ami-68097514"
             },
             "ap-southeast-2": {
-                "AMZNLINUXHVM": "ami-162c2575"
+                "AMZNLINUXHVM": "ami-942dd1f6"
             },
             "ca-central-1": {
-                "AMZNLINUXHVM": "ami-a7aa15c3"
+                "AMZNLINUXHVM": "ami-a954d1cd"
+            },
+            "cn-north-1": {
+                "AMZNLINUXHVM": "ami-cb19c4a6"
             },
             "eu-west-1": {
-                "AMZNLINUXHVM": "ami-01ccc867"
+                "AMZNLINUXHVM": "ami-d834aba1"
             },
             "eu-west-2": {
-                "AMZNLINUXHVM": "ami-b6daced2"
+                "AMZNLINUXHVM": "ami-403e2524"
             },
             "eu-central-1": {
-                "AMZNLINUXHVM": "ami-82be18ed"
+                "AMZNLINUXHVM": "ami-5652ce39"
             },
             "sa-east-1": {
-                "AMZNLINUXHVM": "ami-37cfad5b"
+                "AMZNLINUXHVM": "ami-84175ae8"
             },
             "us-east-1": {
-                "AMZNLINUXHVM": "ami-c58c1dd3"
+                "AMZNLINUXHVM": "ami-97785bed"
             },
             "us-east-2": {
-                "AMZNLINUXHVM": "ami-4191b524"
+                "AMZNLINUXHVM": "ami-f63b1193"
             },
             "us-west-1": {
-                "AMZNLINUXHVM": "ami-7a85a01a"
+                "AMZNLINUXHVM": "ami-824c4ee2"
             },
             "us-west-2": {
-                "AMZNLINUXHVM": "ami-4836a428"
+                "AMZNLINUXHVM": "ami-f2d3638a"
             }
         },
         "LinuxAMINameMap": {
@@ -178,10 +184,6 @@
                 "IOPs": "20000"
             }
         }
-
-
-
-
     },
     "Conditions": {
         "EphemeralStorage": {
@@ -281,6 +283,12 @@
                         "file = /var/log/cfn-wire.log\n",
                         "log_group_name = ", { "Ref": "CloudFormationLogs" }, "\n",
                         "log_stream_name = {instance_id}/cfn-wire.log\n",
+                        "datetime_format = \n",
+
+                        "[/var/log/solace-vmr.log]\n",
+                        "file = /var/log/solace-vmr.log\n",
+                        "log_group_name = ", { "Ref": "CloudFormationLogs" }, "\n",
+                        "log_stream_name = {instance_id}/solace-vmr.log\n",
                         "datetime_format = \n"
                         ] ] },
                         "mode": "000444",
@@ -355,10 +363,18 @@
                         }
                     }
                 },
+
                 "install_solace" : {
+                        "commands" : {
+                        "01_create_secrets_directory" : {
+                            "command" : "mkdir -p /mnt/vmr/secrets"
+                        }
+                        },
                         "files": {
-                            "/tmp/solOSpasswd": {
-                                "content" : { "Ref": "AdminPassword" }
+                            "/mnt/vmr/secrets/solOSpasswd": {
+                                "content": { "Fn::Join": [ "", [
+                                     { "Ref" : "AdminPassword" }, "\n"
+                                ] ] },
                             },
                             "/tmp/gen-cluster-hosts.sh": {
                                 "source": {
@@ -614,10 +630,15 @@
                                 "$AMI_SBIN/install-solace.sh -c /tmp/solacehosts -d /tmp/solace",
                                 "  -u ",
                                     { "Ref": "SolaceDockerURL" },
-                                "  -p /tmp/solOSpasswd",
+                                "  -p /mnt/vmr/secrets/solOSpasswd",
                                 "  -s ",
                                    { "Ref": "PersistentStorage" },
                                 "  -v /dev/xvdb",
+                                "  -f ",
+                                    { "Ref": "ContainerLoggingFormat" },
+                                "  -g ",
+                                    { "Ref": "CloudFormationLogs" },
+                                "  -r ${instance_id}/solace-vmr.log",
                                 " \n",
                                 "## Signal back information for outputs (now that all nodes are up) \n",
                                 "/opt/aws/bin/cfn-signal -e 0 -r 'Solace HA deployment complete' '",
